--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,5 @@
 /* color palette from <https://github.com/vuejs/theme> */
+@import url("https://fonts.googleapis.com/css2?family=Sansita&display=swap");
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -63,8 +64,6 @@
   position: relative;
   font-weight: normal;
 }
-
-
 
 body {
   min-height: 100vh;
